fix: Totally hides unmatched template when filtered. Tags are also contained in a radix scrollbar.

--- a/src/components/BlockFilter/_styles.scss
+++ b/src/components/BlockFilter/_styles.scss
@@ -33,9 +33,9 @@
     flex-wrap: wrap;
     gap: 0.5rem;
     max-height: 5rem;
-    overflow: auto;
+    overflow: visible;
     @include breakpoint('md') {
-      max-height: 12rem;
+      max-height: 6rem;
     }
 
     .tag {
