--- a/src/panels/blocks/_styles.scss
+++ b/src/panels/blocks/_styles.scss
@@ -424,3 +424,7 @@ input[type='color'] {
     padding: 0;
   }
 }
+
+.filteredBlockContainer:has(> div:empty) {
+  display: none !important;
+}
